A7_1 Contact us + A7_2 Privacy policy

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,7 @@
 
     <!--dialog coupon-->
     <string name="button_ok">ダウンロード</string>
+    <string name="title_policy">プライバシーポリシー</string>
+    <string name="title_contact">お問い合わせ</string>
+    <string name="terms_of_use">利用規約</string>
 </resources>
