add action left menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,4 +52,6 @@
     <string name="title_policy">プライバシーポリシー</string>
     <string name="title_contact">お問い合わせ</string>
     <string name="terms_of_use">利用規約</string>
+    <string name="wall_paper">壁紙</string>
+    <string name="guiridingu">グリーディング</string>
 </resources>
