add url other sreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     <string name="terms_of_use">利用規約</string>
     <string name="wall_paper">壁紙</string>
     <string name="guiridingu">グリーディング</string>
+    <string name="other">その他</string>
 </resources>
