--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="button_term_user">同意する</string>
     <string name="button_tutorial">スキップ</string>
     <string name="button_register">マイページの登録はこちら</string>
+    <string name="download_finish">画像を端末に保存しました</string>
 
 
     <!-- character code-->
