--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
         <item>FAQ</item>
         <item>お問い合わせ</item>
     </string-array>
-    <string name="drawer_nav_footer_text">(C)やなせたかし／フレーベル館・ＴＭＳ・ＮＴＶ \n \t \t \t \t \t \t \t
+    <string name="drawer_nav_footer_text">(C)やなせたかし／フレーベル館・ＴＭＳ・ＮＴＶ \n
 (C)アンパンマンデジタルＬＬＰ</string>
 
 
