--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,6 +65,9 @@
     <string name="button_close">閉じる</string>
     <string name="button_register">マイページの登録はこちら</string>
     <string name="download_finish">画像を端末に保存しました</string>
+    <string name="is_download_image">画像を端末に保存しますか？</string>
+    <string name="yes_dowload">はい</string>
+    <string name="no_download">いいえ</string>
 
     <!-- Tutorial sceen title-->
     <string-array name="background_tutorial">
