--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
 
     <!--common-->
     <string name="no_internet">通信状況をお確かめのうえ、再度お試しください。</string>
+    <string name="no_data">JSON Error - Null</string>
 
     <!-- XView -->
     <string name="pull_to_refresh_pull_label">下に引っ張る事で更新する</string>
