--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,6 +40,18 @@
         <item>お問い合わせ</item>
     </string-array>
 
+    <string-array name="item_menu">
+        <item>ダウンロード</item>
+        <item>壁紙</item>
+        <item>グリーディング</item>
+        <item>その他</item>
+        <item>アンパンマンポータルサイト</item>
+        <item>利用規約</item>
+        <item>プライバシーポリシー</item>
+        <item>FAQ</item>
+        <item>お問い合わせ</item>
+    </string-array>
+
     <string name="drawer_nav_footer_text">©やなせたかし／フレーベル館・TMS・NTV \n
 ©アンパンマンデジタルLLP</string>
 
